--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,5 @@
 package: github.com/willmadison/battleship
 import:
 - package: github.com/spf13/viper
+- package: github.com/pkg/errors
+  version: ^0.8.0
